Add Google Maps

--- a/Manual/The Samsung.html
+++ b/Manual/The Samsung.html
@@ -53,8 +53,8 @@
 							<td><img src="img/The Samsung/Photomath.png" height="60"></td>
 						</tr>
 						<tr>
-							<td>Snapchat</td>
-							<td><img src="img/The Samsung/Snapchat.png" height="60"></td>
+							<td>Google Maps</td>
+							<td><img src="img/The Samsung/Google Maps.png" height="60"></td>
 							<td class='empty'></td>
 							<td>Spotify</td>
 							<td><img src="img/The Samsung/Spotify.png" height="60"></td>
@@ -555,7 +555,38 @@
                     <span class="page-header-section-title">The Samsung</span>
                 </div>
                 <div class="page-content">
-                    <h3>Some other apps:</h3>
+                    <h3>Google Maps:</h3>
+					<p>Two pairs of coordinates will be displayed. The digit for this app is the difference between the digits that correspond to the countries that contain these coordinates in the table below.</p>
+					<table>
+						<tr>
+							<td>0</td>
+							<td>1</td>
+							<td>2</td>
+							<td>3</td>
+							<td>4</td>
+						</tr>
+						<tr>
+							<td>United States</td>
+							<td>Canada</td>
+							<td>Mexico</td>
+							<td>Russia</td>
+							<td>Germany</td>
+						</tr>
+						<tr>
+							<td>5</td>
+							<td>6</td>
+							<td>7</td>
+							<td>8</td>
+							<td>9</td>
+						</tr>
+						<tr>
+							<td>Australia</td>
+							<td>United Kingdom</td>
+							<td>China</td>
+							<td>Brazil</td>
+							<td>South Africa</td>
+						</tr>
+					</table>
                 </div>
                 <div class="page-footer relative-footer">Page 5 of 11</div>
             </div>
@@ -581,8 +612,8 @@
 					</ol>
 					<h3>Photomath:</h3>
 					<p>Press the start button to cycle through a set of 7 mathematical symbols, each with a different color. After the first cycle, a symbolic keypad and some circles will appear, and the cycle can be repeated any time without consequence.</p>
-					<p>Take the grid below that corresponds to the last digit of the serial number. This is the placement of the digits on the keypad. Use this to associate symbols with digits. The circles on the bottom correspond to the operators +, -, *, and / in that order.</p>
-					<p>Using the symbol that flashes in the corner once as the starting value, perform the operations in the order of the cycle, using the color for the operator and the symbol for the digit. Ignore all decimals. If you are ever told to divide by 0, do nothing. Then, add the number of times in the cycle you had to add or multiply. Submit this answer using the keypad to get this app's solution in the form of its symbol. Use the green button to submit, and the red button to clear.</p>
+					<p>Take the grid below that corresponds to the last digit of the serial number. This is the placement of the digits on the keypad. Use this to associate symbols with digits. The colors of the circles on the bottom correspond to the operators +, -, *, and / in that order.</p>
+					<p>Using the symbol that flashes in the corner once per sequence as the starting value, perform the operations in the order of the cycle, using the color for the operator and the symbol for the digit. Ignore all decimals. If you are ever told to divide by 0, do nothing. Then, add the number of times in the cycle you had to add or multiply. Submit this answer using the keypad to get this app's solution in the form of its symbol. Use the green button to submit, and the red button to clear.</p>
 				</div>
                 <div class="page-footer relative-footer">Page 6 of 11</div>
             </div>
@@ -962,8 +993,8 @@
 						</tr>
 						<tr>
 							<td>Espik</td>
-							<td>Zefod</td>
-							<td>Zefod</td>
+							<td>Nico Robin</td>
+							<td>Nico Robin</td>
 							<td>Numdegased</td>
 						</tr>
 						<tr>
@@ -988,10 +1019,10 @@
 							<td>Timwi</td>
 							<td>Espik</td>
 							<td>eXish</td>
-							<td>Zefod</td>
+							<td>Nico Robin</td>
 						</tr>
 						<tr>
-							<td>Zefod</td>
+							<td>Nico Robin</td>
 							<td>Blananas</td>
 							<td>SillyPuppy</td>
 							<td>Deaf</td>
@@ -1022,14 +1053,14 @@
 							<td><img src="img/The Samsung/num.png" height="60"></td>
 						</tr>
 						<tr>
-							<td>Zefod</td>
+							<td>Nico Robin</td>
 							<td>Espik</td>
 							<td>Procyon</td>
 							<td>eXish</td>
 							<td>SillyPuppy</td>
 						</tr>
 						<tr>
-							<td><img src="img/The Samsung/zefod.png" height="60"></td>
+							<td><img src="img/The Samsung/nico.png" height="60"></td>
 							<td><img src="img/The Samsung/espik.png" height="60"></td>
 							<td><img src="img/The Samsung/procyon.png" height="60"></td>
 							<td><img src="img/The Samsung/exish.png" height="60"></td>
