--- a/Manual/The Samsung.html
+++ b/Manual/The Samsung.html
@@ -556,7 +556,7 @@
                 </div>
                 <div class="page-content">
                     <h3>Google Maps:</h3>
-					<p>Two pairs of coordinates will be displayed. The digit for this app is the difference between the digits that correspond to the countries that contain these coordinates in the table below.</p>
+					<p>A pair of coordinates will be displayed, in latitude-longitude form. The digit for this app is the difference between the digits that correspond to the countries that contain these coordinates in the table below.</p>
 					<table>
 						<tr>
 							<td>0</td>
@@ -909,22 +909,22 @@
 						<tr>
 							<td>A</td>
 							<td>B, G, N, O, V, X, FOR, ED, GG, IN</td>
-							<td>Up</td>
+							<td>If the number of modules on the bomb is even, up, otherwise down</td>
 						</tr>
 						<tr>
 							<td>B</td>
 							<td>A, K, P, T, AND, BB, CH, EN, OU, ST</td>
-							<td>Right</td>
+							<td>If there is a lit MSA or NSA, left, otherwise right</td>
 						</tr>
 						<tr>
 							<td>C</td>
 							<td>E, I, M, S, U, Y, CC, EA, ER, OW</td>
-							<td>Down</td>
+							<td>If the serial number contains C, O, R, or A, down, otherwise left</td>
 						</tr>
 						<tr>
 							<td>D</td>
 							<td>C, F, L, Q, Z, THE, AR, ING, SH, TH</td>
-							<td>Left</td>
+							<td>If the number of batteries + the number of holders is even, up, otherwise right</td>
 						</tr>
 						<tr>
 							<td>E</td>
@@ -938,7 +938,7 @@
 						</tr>
 					</table>
 					<p>This direction refers to the user that is the farthest that way, without being tied.</p>
-					<p>The first person you call will be doing an activity. Identify the activity, and press the mute button when the last digit of the timer is the activity's position in the table below. (Starting from 0.)</p>
+					<p>The first person you call will be doing an activity. Identify the activity, and press the mute button when the last digit of the timer is the activity's position in reading order in the table below. (Starting from 0.)</p>
 					<table>
 						<tr>
 							<td>Defusing a bomb</td>
