--- a/Manual/The Samsung.html
+++ b/Manual/The Samsung.html
@@ -36,7 +36,7 @@
                     <p class="flavour-text">If you have a hard time keeping up with Apple phones and which version is which, you’ll have a horrible time with Samsung’s.</p>
                     <p>This module consists of 9 apps, in random positions, except for settings, which will always be in the center.</p>
 					<p>To solve the module, enter an 8-digit pin in the settings app, obtaining one digit from each other app.</p>
-					<p>In order to allow for as much screen space as possible, the status light has been omitted. The front camera serves as a replacment.</p>
+					<p>In order to allow for as much screen space as possible, the status light has been omitted. The front camera serves as a replacement.</p>
 					<table>
 						<tr>
 							<th>App:</th>
@@ -60,8 +60,8 @@
 							<td><img src="img/The Samsung/Spotify.png" height="60"></td>
 						</tr>
 						<tr>
-							<td>Pocket Frogs</td>
-							<td><img src="img/The Samsung/Pocket Frogs.png" height="60"></td>
+							<td>TBD</td>
+							<td></td>
 							<td class='empty'></td>
 							<td>Google Arts & Culture</td>
 							<td><img src="img/The Samsung/Google Culture.png" height="60"></td>
@@ -74,7 +74,7 @@
 							<td><img src="img/The Samsung/Discord.png" height="60"></td>
 						</tr>
 					</table>
-					<p>On the home screen, click an app to enter it. This will enable the home button, which is a clickable area at the bottom of the screen.<p>
+					<p>On the home screen, click an app to enter it. This will enable the home button, which is a clickable area at the bottom of the screen, taking you back to the home screen.<p>
 					<p>Submitting an incorrect pin will incur a strike, but the solution will never change.<p>
                 </div>
                 <div class="page-footer relative-footer">Page 1 of 11</div>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="page-content">
                     <h3>Duolingo:</h3>
-					<p>Thee words will be displayed, written in a foreign language. They will spell out a simple math expression. (e.g. "five plus nine.") Calculate the answer to this expression, then add that to the digit corresponding to the language the expression is written in. Take that modulo 10 as this app's digit.</p>
+					<p>Three words will be displayed, written in a foreign language. They will spell out a simple math expression (e.g. "five plus nine"). Calculate the answer to this expression, then add that to the digit corresponding to the language the expression is written in. Take that modulo 10 as this app's digit.</p>
 					<p>Ignore all decimals when calculating.</p>
 					<table>
 						<tr>
@@ -611,7 +611,7 @@
 						<li>Divisible by 3</li>
 					</ol>
 					<h3>Photomath:</h3>
-					<p>Press the start button to cycle through a set of 7 mathematical symbols, each with a different color. After the first cycle, a symbolic keypad and some circles will appear, and the cycle can be repeated any time without consequence.</p>
+					<p>Press the start button to cycle through a set of 7 mathematical symbols, each with a different color. After the first cycle, a keypad written in symbols and some circles will appear, and the cycle can be repeated any time without consequence.</p>
 					<p>Take the grid below that corresponds to the last digit of the serial number. This is the placement of the digits on the keypad. Use this to associate symbols with digits. The colors of the circles on the bottom correspond to the operators +, -, *, and / in that order.</p>
 					<p>Using the symbol that flashes in the corner once per sequence as the starting value, perform the operations in the order of the cycle, using the color for the operator and the symbol for the digit. Ignore all decimals. If you are ever told to divide by 0, do nothing. Then, add the number of times in the cycle you had to add or multiply. Submit this answer using the keypad to get this app's solution in the form of its symbol. Use the green button to submit, and the red button to clear.</p>
 				</div>
@@ -945,7 +945,7 @@
 							<td>Playing Jackbox</td>
 							<td>Playing Tabletop Simulator</td>
 							<td>Reaction to a new module</td>
-							<td>Complaining about slep</td>
+							<td>Complaining about sleep</td>
 						</tr>
 						<tr>
 							<td>Experting for a bomb</td>
@@ -965,7 +965,7 @@
                     <span class="page-header-section-title">The Samsung</span>
                 </div>
                 <div class="page-content">
-                    <p>The second user to call is the one whos name appears first on the following table, ignoring the first person you called, and using the direction you used as the column.</p>
+                    <p>The second user to call is the one whose name appears first on the following table, ignoring the first person you called, and using the direction you used as the column.</p>
 					<table>
 						<tr>
 							<th>Up:</th>
@@ -1068,7 +1068,7 @@
 						</tr>
 					</table>
 				</div>
-                <div class="page-footer relative-footer">Page 11 of 11</div>
+                <div class="page-footer relative-footer">Page 10 of 11</div>
             </div>
 			<div class="page page-bg-04">
                 <div class="page-header">
