--- a/Manual/The Samsung.html
+++ b/Manual/The Samsung.html
@@ -19,6 +19,9 @@
 		td {
 			text-align: center;
 		}
+		.small {
+			font-size: 11px;
+		}
 	</style>
     <script src="js/ktane-utils.js"></script>
 </head>
@@ -60,8 +63,8 @@
 							<td><img src="img/The Samsung/Spotify.png" height="60"></td>
 						</tr>
 						<tr>
-							<td>TBD</td>
-							<td></td>
+							<td>Kindle</td>
+							<td><img src="img/The Samsung/Kindle.png" height="60"></td>
 							<td class='empty'></td>
 							<td>Google Arts & Culture</td>
 							<td><img src="img/The Samsung/Google Culture.png" height="60"></td>
@@ -585,6 +588,40 @@
 							<td>China</td>
 							<td>Brazil</td>
 							<td>South Africa</td>
+						</tr>
+					</table>
+					<h3>Kindle:</h3>
+					<p>Four words will be displayed. They are an excerpt from one of the quotes below. Every word has had its letters shifted forwards by a certain amount. The digit for this app is the digit that corresponds to the excert plus the amount the letters are shifted by, modulo 10. (Ignore all punctuation and casing.)</p>
+					<table>
+						<tr>
+							<td>0</td>
+							<td class='small'>"You have brains in your head. You have feet in your shoes. You can steer yourself any direction you choose."</td>
+							<td>5</td>
+							<td class='small'>"We’ve all got both light and dark inside us. What matters is the part we choose to act on. That’s who we really are."</td>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td class='small'>"There are darknesses in life and there are lights, and you are one of the lights, the light of all lights."</td>
+							<td>6</td>
+							<td class='small'>"Do I love you? My God, if your love were a grain of sand, mine would be a universe of beaches."</td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td class='small'>"You never really understand a person until you consider things from his point of view, until you climb inside of his skin and walk around in it."</td>
+							<td>7</td>
+							<td class='small'>"Doublethink means the power of holding two contradictory beliefs in one's mind simultaneously, and accepting both of them."</td>
+						</tr>
+						<tr>
+							<td>3</td>
+							<td class='small'>"Bet I know something else you don’t. There’s dew on the grass in this morning."</td>
+							<td>8</td>
+							<td class='small'>"Maybe ever’body in the whole damn world is scared of each other."</td>
+						</tr>
+						<tr>
+							<td>4</td>
+							<td class='small'>"We lived in the blank white spaces at the edges of print. It gave us more freedom."</td>
+							<td>9</td>
+							<td class='small'>"There is an idea of a Patrick Bateman, some kind of abstraction, but there is no real me, only an entity, something illusory."</td>
 						</tr>
 					</table>
                 </div>
