--- a/Manual/The Samsung.html
+++ b/Manual/The Samsung.html
@@ -591,7 +591,7 @@
 						</tr>
 					</table>
 					<h3>Kindle:</h3>
-					<p>Four words will be displayed. They are an excerpt from one of the quotes below. Every word has had its letters shifted forwards by a certain amount. The digit for this app is the digit that corresponds to the excert plus the amount the letters are shifted by, modulo 10. (Ignore all punctuation and casing.)</p>
+					<p>Four words will be displayed. They are an excerpt from one of the quotes below. Every word has had its letters shifted forwards by a certain amount. The digit for this app is the digit that corresponds to the excerpt plus the amount the letters are shifted by, modulo 10. (Ignore all punctuation and casing.)</p>
 					<table>
 						<tr>
 							<td>0</td>
@@ -650,7 +650,7 @@
 					<h3>Photomath:</h3>
 					<p>Press the start button to cycle through a set of 7 mathematical symbols, each with a different color. After the first cycle, a keypad written in symbols and some circles will appear, and the cycle can be repeated any time without consequence.</p>
 					<p>Take the grid below that corresponds to the last digit of the serial number. This is the placement of the digits on the keypad. Use this to associate symbols with digits. The colors of the circles on the bottom correspond to the operators +, -, *, and / in that order.</p>
-					<p>Using the symbol that flashes in the corner once per sequence as the starting value, perform the operations in the order of the cycle, using the color for the operator and the symbol for the digit. Ignore all decimals. If you are ever told to divide by 0, do nothing. Then, add the number of times in the cycle you had to add or multiply. Submit this answer using the keypad to get this app's solution in the form of its symbol. Use the green button to submit, and the red button to clear.</p>
+					<p>Using the symbol that flashes in the corner once per sequence as the starting value, perform the operations in the order of the cycle, using the color for the operator and the symbol for the digit. Ignore all decimals. Take the absolute value and submit this answer using the keypad to get this app's solution in the form of its symbol. Use the green button to submit, and the red button to clear. Striking also clears input.</p>
 				</div>
                 <div class="page-footer relative-footer">Page 6 of 11</div>
             </div>
@@ -867,7 +867,7 @@
 							<td>4th of death year</td>
 						</tr>
 					</table>
-					<p>Identify the artist of the painting shown to obtain the initial digit. Consider each row in the table below to have its paintings numbered from 1 - 5, and call the index of the displayed painting n. If the text correctly identifies the artist, use the nth even digit from 0 - 9. If it doesn't, use the nth odd digit. Add this digit to the initial digit. The result modulo 10 is this app's digit.</p>
+					<p>Identify the artist of the painting shown to obtain the starting digit. Consider each row in the table below to have its paintings numbered from 1 - 5, and call the index of the displayed painting n. If the text correctly identifies the artist, use the nth even digit in the set 0 - 9. If it doesn't, use the nth odd digit. Add this digit to the starting digit. The result modulo 10 is this app's digit.</p>
 					<table>
 						<tr>
 							<td class='empty'></td>
@@ -992,7 +992,7 @@
 							<td>Any other activity</td>
 						</tr>
 					</table>
-					<p>If this is done succesfully, the user will describe a symbol and then a color, then the call will end.</p>
+					<p>If this is done successfully, the user will describe a symbol and then a color, then the call will end.</p>
 				</div>
                 <div class="page-footer relative-footer">Page 9 of 11</div>
             </div>
