--- a/Manual/The Samsung.html
+++ b/Manual/The Samsung.html
@@ -327,7 +327,7 @@
 							<th>Japanese: (7)</th>
 							<th>Korean: (8)</th>
 							<th>Mongolian: (9)</th>
-							<th>Khmer: (10)</th>
+							<th>Thai: (10)</th>
 						</tr>
 						<tr>
 							<th>Zero</th>
@@ -335,7 +335,7 @@
 							<td>ゼロ</td>
 							<td>제로</td>
 							<td>Тэг</td>
-							<td>សូន</td>
+							<td>ศูนย์</td>
 						</tr>
 						<tr>
 							<th>One</th>
@@ -343,7 +343,7 @@
 							<td>一</td>
 							<td>하나</td>
 							<td>Нэг н</td>
-							<td>មួយ</td>
+							<td>หนึ่ง</td>
 						</tr>
 						<tr>
 							<th>Two</th>
@@ -351,7 +351,7 @@
 							<td>二</td>
 							<td>두</td>
 							<td>Хоёр</td>
-							<td>ពីរ</td>
+							<td>สอง</td>
 						</tr>
 						<tr>
 							<th>Three</th>
@@ -359,7 +359,7 @@
 							<td>三</td>
 							<td>세</td>
 							<td>Гурав</td>
-							<td>បី</td>
+							<td>สาม</td>
 						</tr>
 						<tr>
 							<th>Four</th>
@@ -367,7 +367,7 @@
 							<td>四</td>
 							<td>네</td>
 							<td>Дөрөв</td>
-							<td>បួន</td>
+							<td>สี่</td>
 						</tr>
 						<tr>
 							<th>Five</th>
@@ -375,7 +375,7 @@
 							<td>五</td>
 							<td>다섯</td>
 							<td>Тав</td>
-							<td>ប្រាំ</td>
+							<td>ห้า</td>
 						</tr>
 						<tr>
 							<th>Six</th>
@@ -383,7 +383,7 @@
 							<td>六</td>
 							<td>육</td>
 							<td>Зургаа</td>
-							<td>ប្រាំមួយ</td>
+							<td>หก</td>
 						</tr>
 						<tr>
 							<th>Seven</th>
@@ -391,7 +391,7 @@
 							<td>セ</td>
 							<td>일곱</td>
 							<td>Долоо</td>
-							<td>ប្រាំពីរ</td>
+							<td>เจ็ด</td>
 						</tr>
 						<tr>
 							<th>Eight</th>
@@ -399,7 +399,7 @@
 							<td>八</td>
 							<td>여덟</td>
 							<td>Найм</td>
-							<td>ប្រាំបី</td>
+							<td>แปด</td>
 						</tr>
 						<tr>
 							<th>Nine</th>
@@ -407,7 +407,7 @@
 							<td>九</td>
 							<td>아홉</td>
 							<td>Есөн</td>
-							<td>ប្រាំបួន</td>
+							<td>เก้า</td>
 						</tr>
 						<tr>
 							<th>Ten</th>
@@ -415,7 +415,7 @@
 							<td>十</td>
 							<td>십</td>
 							<td>Арав</td>
-							<td>ដប់</td>
+							<td>สิบ</td>
 						</tr>
 						<tr>
 							<th>Eleven</th>
@@ -423,7 +423,7 @@
 							<td>十一</td>
 							<td>열한</td>
 							<td>Арван нэг</td>
-							<td>ដប់មួយ</td>
+							<td>สิบเอ็ด</td>
 						</tr>
 						<tr>
 							<th>Twelve</th>
@@ -431,7 +431,7 @@
 							<td>十二</td>
 							<td>열 두번째</td>
 							<td>Арван Хоёр</td>
-							<td>ដប់ពីរ</td>
+							<td>สิบสอง</td>
 						</tr>
 					</table>
 				</div>
@@ -450,7 +450,7 @@
 							<th>Japanese: (7)</th>
 							<th>Korean: (8)</th>
 							<th>Mongolian: (9)</th>
-							<th>Khmer: (10)</th>
+							<th>Thai: (10)</th>
 						</tr>
 						<tr>
 							<th>Thirteen</th>
@@ -458,7 +458,7 @@
 							<td>十三</td>
 							<td>열셋</td>
 							<td>Арван Гурав</td>
-							<td>ដប់បី</td>
+							<td>สิบสาม</td>
 						</tr>
 						<tr>
 							<th>Fourteen</th>
@@ -466,7 +466,7 @@
 							<td>十四</td>
 							<td>십사</td>
 							<td>Арван Дөрөв</td>
-							<td>ដប់បួន</td>
+							<td>สิบสี่</td>
 						</tr>
 						<tr>
 							<th>Fifteen</th>
@@ -474,7 +474,7 @@
 							<td>十五</td>
 							<td>열 다섯</td>
 							<td>Арван таван</td>
-							<td>ដប់ប្រាំ</td>
+							<td>สิบห้า</td>
 						</tr>
 						<tr>
 							<th>Sixteen</th>
@@ -482,7 +482,7 @@
 							<td>十六</td>
 							<td>열 여섯</td>
 							<td>Арван Зургаа</td>
-							<td>ដប់ប្រាំមួយ</td>
+							<td>สิบหก</td>
 						</tr>
 						<tr>
 							<th>Seventeen</th>
@@ -490,7 +490,7 @@
 							<td>十セ</td>
 							<td>십칠</td>
 							<td>Арван Долоо</td>
-							<td>ដប់ប្រាំបី</td>
+							<td>สิบเจ็ด</td>
 						</tr>
 						<tr>
 							<th>Eighteen</th>
@@ -498,7 +498,7 @@
 							<td>十八</td>
 							<td>십팔</td>
 							<td>Арван Найм</td>
-							<td>ដប់ប្រាំបី</td>
+							<td>สิบแปด</td>
 						</tr>
 						<tr>
 							<th>Nineteen</th>
@@ -506,7 +506,7 @@
 							<td>十九</td>
 							<td>십구</td>
 							<td>Арван Ес</td>
-							<td>ដប់ប្រាំមួយ</td>
+							<td>สิบเก้า</td>
 						</tr>
 						<tr>
 							<th>Twenty</th>
@@ -514,7 +514,7 @@
 							<td>二十</td>
 							<td>스물</td>
 							<td>Хорин</td>
-							<td>ម្ភៃ</td>
+							<td>ยี่สิบ</td>
 						</tr>
 						<tr>
 							<th>Plus</th>
@@ -522,7 +522,7 @@
 							<td>プラス</td>
 							<td>을 더한</td>
 							<td>Дээрээс нь</td>
-							<td>បូក</td>
+							<td>บวก</td>
 						</tr>
 						<tr>
 							<th>Minus</th>
@@ -530,7 +530,7 @@
 							<td>マイナス</td>
 							<td>마이너스</td>
 							<td>Хасах</td>
-							<td>ដក</td>
+							<td>ลบ</td>
 						</tr>
 						<tr>
 							<th>Times</th>
@@ -538,7 +538,7 @@
 							<td>かける</td>
 							<td>곱하다</td>
 							<td>Үржүүлэх</td>
-							<td>គុណ</td>
+							<td>ครั้ง</td>
 						</tr>
 						<tr>
 							<th>Divided by</th>
@@ -546,7 +546,7 @@
 							<td>割る</td>
 							<td>나누기</td>
 							<td>Хуваана</td>
-							<td>ចែក</td>
+							<td>หารด้วย</td>
 						</tr>
 					</table>
                 </div>
