--- a/Manual/The Samsung.html
+++ b/Manual/The Samsung.html
@@ -313,7 +313,7 @@
 							<td>Por</td>
 							<td>Per</td>
 							<td>乘</td>
-							<td>Multiplié</td>
+							<td>Multiplié par</td>
 							<td>Vermeerder</td>
 						</tr>
 						<tr>
@@ -321,7 +321,7 @@
 							<td>Divido por</td>
 							<td>Diviso</td>
 							<td>除</td>
-							<td>Divisé</td>
+							<td>Divisé par</td>
 							<td>Verdeel</td>
 						</tr>
 					</table>
@@ -459,7 +459,7 @@
 						</tr>
 						<tr>
 							<th>Thirteen</th>
-							<td>Kuma na Tatu</td>
+							<td>Kumi na Tatu</td>
 							<td>十三</td>
 							<td>열셋</td>
 							<td>Арван Гурав</td>
@@ -467,7 +467,7 @@
 						</tr>
 						<tr>
 							<th>Fourteen</th>
-							<td>Kuma na Nne</td>
+							<td>Kumi na Nne</td>
 							<td>十四</td>
 							<td>십사</td>
 							<td>Арван Дөрөв</td>
@@ -475,7 +475,7 @@
 						</tr>
 						<tr>
 							<th>Fifteen</th>
-							<td>Kuma na Tano</td>
+							<td>Kumi na Tano</td>
 							<td>十五</td>
 							<td>열 다섯</td>
 							<td>Арван таван</td>
@@ -483,7 +483,7 @@
 						</tr>
 						<tr>
 							<th>Sixteen</th>
-							<td>Kuma na Sita</td>
+							<td>Kumi na Sita</td>
 							<td>十六</td>
 							<td>열 여섯</td>
 							<td>Арван Зургаа</td>
@@ -491,7 +491,7 @@
 						</tr>
 						<tr>
 							<th>Seventeen</th>
-							<td>Kuma na Saba</td>
+							<td>Kumi na Saba</td>
 							<td>十セ</td>
 							<td>십칠</td>
 							<td>Арван Долоо</td>
@@ -499,7 +499,7 @@
 						</tr>
 						<tr>
 							<th>Eighteen</th>
-							<td>Kuma na Nane</td>
+							<td>Kumi na Nane</td>
 							<td>十八</td>
 							<td>십팔</td>
 							<td>Арван Найм</td>
@@ -507,7 +507,7 @@
 						</tr>
 						<tr>
 							<th>Nineteen</th>
-							<td>Kuma na Tisa</td>
+							<td>Kumi na Tisa</td>
 							<td>十九</td>
 							<td>십구</td>
 							<td>Арван Ес</td>
