--- a/Manual/The Samsung.html
+++ b/Manual/The Samsung.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="page-content">
                     <h3>Duolingo:</h3>
-					<p>Three words will be displayed, written in a foreign language. They will spell out a simple math expression (e.g. "five plus nine"). Calculate the answer to this expression, then add that to the digit corresponding to the language the expression is written in. Take that modulo 10 as this app’s digit.</p>
+					<p>Three words will be displayed, written in a foreign language. They will spell out a simple math expression (e.g. "five plus nine"). Calculate the answer to this expression, then add that to the digit corresponding to the language the expression is written in. Take that the absolute value of that modulo 10 as this app’s digit.</p>
 					<p>Ignore all decimals when calculating.</p>
 					<table>
 						<tr>
@@ -642,7 +642,7 @@
 					<p>This app displays 3 six-digit numbers. When the progress bar at the bottom disappears, 3 new numbers will be generated. Every number applies to one of the conditions listed below. The digit that corresponds to the condition is the digit for this app.</p>
 					<ol start="0">
 						<li>Digital root is 8</li>
-						<li>Modulo 3 is even</li>
+						<li>Modulo 3 is odd</li>
 						<li>Divisible by 7</li>
 						<li>Modulo 5 is odd</li>
 						<li>Digital root is 3 or 4</li>
