--- a/Manual/The Samsung.html
+++ b/Manual/The Samsung.html
@@ -338,7 +338,7 @@
 							<th>Zero</th>
 							<td>Sufuri</td>
 							<td>ゼロ</td>
-							<td>제로</td>
+							<td>영</td>
 							<td>Тэг</td>
 							<td>ศูนย์</td>
 						</tr>
@@ -346,7 +346,7 @@
 							<th>One</th>
 							<td>Moja</td>
 							<td>一</td>
-							<td>하나</td>
+							<td>일</td>
 							<td>Нэг н</td>
 							<td>หนึ่ง</td>
 						</tr>
@@ -354,7 +354,7 @@
 							<th>Two</th>
 							<td>Mbili</td>
 							<td>二</td>
-							<td>두</td>
+							<td>이</td>
 							<td>Хоёр</td>
 							<td>สอง</td>
 						</tr>
@@ -362,7 +362,7 @@
 							<th>Three</th>
 							<td>Tatu</td>
 							<td>三</td>
-							<td>세</td>
+							<td>삼</td>
 							<td>Гурав</td>
 							<td>สาม</td>
 						</tr>
@@ -370,7 +370,7 @@
 							<th>Four</th>
 							<td>Nne</td>
 							<td>四</td>
-							<td>네</td>
+							<td>사</td>
 							<td>Дөрөв</td>
 							<td>สี่</td>
 						</tr>
@@ -378,7 +378,7 @@
 							<th>Five</th>
 							<td>Tano</td>
 							<td>五</td>
-							<td>다섯</td>
+							<td>오</td>
 							<td>Тав</td>
 							<td>ห้า</td>
 						</tr>
@@ -394,7 +394,7 @@
 							<th>Seven</th>
 							<td>Saba</td>
 							<td>七</td>
-							<td>일곱</td>
+							<td>칠</td>
 							<td>Долоо</td>
 							<td>เจ็ด</td>
 						</tr>
@@ -402,7 +402,7 @@
 							<th>Eight</th>
 							<td>Nane</td>
 							<td>八</td>
-							<td>여덟</td>
+							<td>팔</td>
 							<td>Найм</td>
 							<td>แปด</td>
 						</tr>
@@ -410,7 +410,7 @@
 							<th>Nine</th>
 							<td>Tisa</td>
 							<td>九</td>
-							<td>아홉</td>
+							<td>구</td>
 							<td>Есөн</td>
 							<td>เก้า</td>
 						</tr>
@@ -426,7 +426,7 @@
 							<th>Eleven</th>
 							<td>Kumi na Moja</td>
 							<td>十一</td>
-							<td>열한</td>
+							<td>십일</td>
 							<td>Арван нэг</td>
 							<td>สิบเอ็ด</td>
 						</tr>
@@ -434,7 +434,7 @@
 							<th>Twelve</th>
 							<td>Kumi na Mbili</td>
 							<td>十二</td>
-							<td>열 두번째</td>
+							<td>십이</td>
 							<td>Арван Хоёр</td>
 							<td>สิบสอง</td>
 						</tr>
@@ -461,7 +461,7 @@
 							<th>Thirteen</th>
 							<td>Kumi na Tatu</td>
 							<td>十三</td>
-							<td>열셋</td>
+							<td>십삼</td>
 							<td>Арван Гурав</td>
 							<td>สิบสาม</td>
 						</tr>
@@ -477,7 +477,7 @@
 							<th>Fifteen</th>
 							<td>Kumi na Tano</td>
 							<td>十五</td>
-							<td>열 다섯</td>
+							<td>십오</td>
 							<td>Арван таван</td>
 							<td>สิบห้า</td>
 						</tr>
@@ -485,7 +485,7 @@
 							<th>Sixteen</th>
 							<td>Kumi na Sita</td>
 							<td>十六</td>
-							<td>열 여섯</td>
+							<td>십육</td>
 							<td>Арван Зургаа</td>
 							<td>สิบหก</td>
 						</tr>
@@ -517,7 +517,7 @@
 							<th>Twenty</th>
 							<td>Ishirini</td>
 							<td>二十</td>
-							<td>스물</td>
+							<td>이십</td>
 							<td>Хорин</td>
 							<td>ยี่สิบ</td>
 						</tr>
@@ -525,7 +525,7 @@
 							<th>Plus</th>
 							<td>Pamoja</td>
 							<td>プラス</td>
-							<td>을 더한</td>
+							<td>더하기</td>
 							<td>Дээрээс нь</td>
 							<td>บวก</td>
 						</tr>
@@ -533,7 +533,7 @@
 							<th>Minus</th>
 							<td>Kasoro</td>
 							<td>マイナス</td>
-							<td>마이너스</td>
+							<td>빼기</td>
 							<td>Хасах</td>
 							<td>ลบ</td>
 						</tr>
@@ -541,7 +541,7 @@
 							<th>Times</th>
 							<td>Kuzidisha</td>
 							<td>かける</td>
-							<td>곱하다</td>
+							<td>곱하기</td>
 							<td>Үржүүлэх</td>
 							<td>คูณ</td>
 						</tr>
