--- a/Manual/The Samsung.html
+++ b/Manual/The Samsung.html
@@ -27,6 +27,10 @@
 		        content: "";
 		    }
         }
+		a {
+				color: black;
+				text-decoration: underline;
+		}
 	</style>
     <script src="js/ktane-utils.js"></script>
 </head>
@@ -94,7 +98,7 @@
                 </div>
                 <div class="page-content">
                     <h3>Duolingo:</h3>
-					<p>Three words will be displayed, written in a foreign language. They will spell out a simple math expression (e.g. "five plus nine"). Calculate the answer to this expression, then add that to the digit corresponding to the language the expression is written in. Take that the absolute value of that modulo 10 as this app’s digit.</p>
+					<p>Three words will be displayed, written in a foreign language. They will spell out a simple math expression (e.g. “five plus nine”). Calculate the answer to this expression, then add that to the digit corresponding to the language the expression is written in. Take that the absolute value of that modulo 10 as this app’s digit.</p>
 					<p>Ignore all decimals when calculating.</p>
 					<table>
 						<tr>
