--- a/Manual/The Samsung.html
+++ b/Manual/The Samsung.html
@@ -88,6 +88,7 @@
 					</table>
 					<p>On the home screen, click an app to enter it. This will enable the home button, which is a clickable area at the bottom of the screen, taking you back to the home screen.<p>
 					<p>Submitting an incorrect pin will incur a strike, but the solution will never change.<p>
+					<p>Pressing the notification LED, (which can be found in the top left corner), will regenerate Photomath or Discord if they are open, without changing the solution. Pressing it when neither of those two apps are opened will do nothing.</p>
                 </div>
                 <div class="page-footer relative-footer">Page 1 of 11</div>
             </div>
@@ -946,7 +947,7 @@
                 </div>
                 <div class="page-content">
                     <h3>Discord:</h3>
-					<p>Multiple people’s profile pictures will be displayed in a pattern. To determine the first person to call, observe a <a target="_blank" href="https://ktane.timwi.de/HTML/Braille.html">Braille</a> letter, with the top left dot being the top left position on the module, to obtain a direction.</p>
+					<p>Multiple people’s profile pictures will be displayed in a pattern. To determine the first person to call, observe a <a target="_blank" href="https://ktane.timwi.de/HTML/Braille.html">Braille</a> letter, (with A1 being position 1 and B3 being position 6), to obtain a direction.</p>
 					<table>
 						<tr>
 							<th>Set:</th>
