Fix strike cycle bug, add perfect square rule

--- a/Manual/The Samsung.html
+++ b/Manual/The Samsung.html
@@ -647,7 +647,7 @@
 					<p>This app displays 3 six-digit numbers. When the progress bar at the bottom disappears, 3 new numbers will be generated. Every number applies to one of the conditions listed below. The digit that corresponds to the condition is the digit for this app.</p>
 					<ol start="0">
 						<li>Digital root is 8</li>
-						<li>Modulo 3 is odd</li>
+						<li>Perfect square</li>
 						<li>Divisible by 7</li>
 						<li>Modulo 5 is odd</li>
 						<li>Digital root is 3 or 4</li>
