Add no copyright Spotify setting and fix minor bug

--- a/Manual/The Samsung.html
+++ b/Manual/The Samsung.html
@@ -1,12 +1,12 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>The Samsung — Keep Talking and Nobody Explodes Module</title>
     <meta name="viewport" content="initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/font.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/font.css">
     <style>
         table {
             margin: 1em auto;
@@ -86,7 +86,7 @@
                 </table>
                 <p>On the home screen, click an app to enter it. This will enable the home button, which is a clickable area at the bottom of the screen, taking you back to the home screen.<p>
                 <p>Submitting an incorrect pin will incur a strike, but the solution will never change.<p>
-                <p>Pressing the notification LED, (which can be found in the top left corner), will regenerate Photomath or Discord if they are open, without changing the solution. Pressing it when neither of those two apps are opened will do nothing. In the case of Discord, the LED will turn red while an answer is being generated. Do not interact with the module during this time.</p>
+                <p>Pressing the notification LED, (which can be found in the top left corner), will regenerate Photomath or Discord if they are open, without changing the solution. Pressing it when neither of those two apps are opened will do nothing.</p>
             </div>
             <div class="page-footer relative-footer">Page 1 of 11</div>
         </div>
@@ -653,7 +653,7 @@
                     <li>Digital root is 7</li>
                     <li>Divisible by 9</li>
                     <li>Digital root is 5</li>
-                    <li>Perfect cube</li>
+                    <li>Divisible by 3</li>
                 </ol>
                 <h3>Photomath:</h3>
                 <p>Press the start button to cycle through a set of 4 mathematical symbols, each with a specific color. After the first cycle, a keypad written in symbols and some circles will appear, and the cycle can be repeated any time without consequence.</p>
@@ -831,7 +831,7 @@
                     </tr>
                 </table>
                 <h3>Spotify:</h3>
-                <p>Press the play button to hear a snippet of a song. The position of the song playing in the table below (starting from 0) is the digit for this app. An ad will be played before the snippet.</p>
+                <p>Press the play button to hear a snippet of a song. The position of the song playing in the table below (starting from 0) is the digit for this app. An ad will be played before the snippet. NOTE: if you do not see a crossed out copyright symbol in the bottom left of this app, use <a href="https://ktane.timwi.de/HTML/The%20Samsung%20no%20copyright.html">this</a> manual instead.</p>
                 <table>
                     <tr>
                         <td>You Spin me Right Round</td>
