Minor manual fix and actually show copyright symbol

--- a/Manual/The Samsung.html
+++ b/Manual/The Samsung.html
@@ -831,7 +831,7 @@
                     </tr>
                 </table>
                 <h3>Spotify:</h3>
-                <p>Press the play button to hear a snippet of a song. The position of the song playing in the table below (starting from 0) is the digit for this app. An ad will be played before the snippet. NOTE: if you do not see a crossed out copyright symbol in the bottom left of this app, use <a href="https://ktane.timwi.de/HTML/The%20Samsung%20no%20copyright.html">this</a> manual instead.</p>
+                <p>Press the play button to hear a snippet of a song. The position of the song playing in the table below (starting from 0) is the digit for this app. An ad will be played before the snippet. NOTE: if you see a crossed out copyright symbol in the bottom left of this app, use <a href="https://ktane.timwi.de/HTML/The%20Samsung%20no%20copyright.html">this</a> manual instead.</p>
                 <table>
                     <tr>
                         <td>You Spin me Right Round</td>
