--- a/Manual/The Samsung no copyright.html
+++ b/Manual/The Samsung no copyright.html
@@ -653,7 +653,7 @@
                     <li>Digital root is 7</li>
                     <li>Divisible by 9</li>
                     <li>Digital root is 5</li>
-                    <li>Perfect cube</li>
+                    <li>Modulo 6 is odd</li>
                 </ol>
                 <h3>Photomath:</h3>
                 <p>Press the start button to cycle through a set of 4 mathematical symbols, each with a specific color. After the first cycle, a keypad written in symbols and some circles will appear, and the cycle can be repeated any time without consequence.</p>
